<resources>

    <string name="app_name">Alfred M2</string>

    <!-- Common: Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_manage">Tools</string>

    <string name="action_settings">Settings</string>
    <string name="action_application_info">Application Info</string>
    <string name="action_developer_options">Developer Options</string>
    <string name="action_adb_wireless_settings">ADB Wireless Settings</string>
    <string name="action_notification_access">Notification Access</string>
    <string name="action_text_to_speech">Text-To-Speech</string>
    <string name="action_debug_show_debug_log">Show Debug Log</string>
    <string name="action_debug_clear_debug_log">Clear Debug Log</string>
    <string name="alfred_notification_action_quit">Quit</string>
    <string name="alfred_notification_action_persistent">Persistent</string>
    <string name="alfred_notification_persistent_dialog_title">Keep Alfred's notification persistent</string>
    <string name="alfred_notification_persistent_command">adb shell appops set --uid com.swooby.alfred2017m2 SYSTEM_EXEMPT_FROM_DISMISSIBLE_NOTIFICATIONS allow</string>
    <string name="alfred_notification_persistent_dialog_message">Run the following command from a computer with the Android Debug Bridge (ADB) to prevent Android from dismissing Alfred&apos;s ongoing notification:

%1$s</string>
    <!--
    <string name="action_debug_disable_debug_mode">Disable Debug Mode</string>
    -->

    <!-- MainActivity: May these ever be spoken? -->
    <string name="voice">Voice:</string>
    <string name="speed">Speed:</string>
    <string name="pitch">Pitch:</string>
    <string name="one_tenth">⅒</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="stream">Stream:</string>
    <string name="volume">Volume:</string>
    <string name="profile">Profile:</string>
    <string name="enable_notification_access">Enable Notification Access</string>
    <string name="process_notifications">Process Notifications</string>
    <string name="text_to_speech_test">TextToSpeech: Test</string>
    <string name="text_to_speech_stop_clear">TextToSpeech: Stop/Clear</string>

    <!-- Profile names: May these ever be spoken? -->
    <string name="profile_disabled">Disabled</string>
    <string name="profile_headphones_wired">Headphones: Wired</string>
    <string name="profile_headphones_bluetooth_any">Headphones: Bluetooth Any</string>
    <string name="profile_headphones_bluetooth_X">\tBluetooth: \"%1$s\"</string>
    <string name="profile_headphones_any">Headphones: Any</string>
    <string name="profile_always_on">Always On</string>

</resources>
