<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <!--
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"
        />
        -->

    <item
        android:id="@+id/action_application_info"
        android:title="@string/action_application_info"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_notification_access"
        android:title="@string/action_notification_access"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_text_to_speech"
        android:title="@string/action_text_to_speech"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_debug_show_debug_log"
        android:title="@string/action_debug_show_debug_log"
        android:visible="false"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_debug_clear_debug_log"
        android:title="@string/action_debug_clear_debug_log"
        android:visible="false"
        app:showAsAction="never"/>

    <!--
    <item
        android:id="@+id/action_debug_disable_debug_mode"
        android:title="@string/action_debug_disable_debug_mode"
        android:visible="false"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_set_scanning_options"
        android:title="@string/action_set_scan_options"
        android:visible="false"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_debug_android_application_details"
        android:title="@string/action_debug_android_application_details"
        android:visible="false"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_debug_android_battery_details"
        android:title="@string/action_debug_android_battery_details"
        android:visible="false"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_debug_android_developer_options"
        android:title="@string/action_debug_android_developer_options"
        android:visible="false"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_debug_toggle_bluetooth"
        android:title="@string/action_disable_bluetooth"
        android:visible="false"
        app:showAsAction="never"
        />
        -->

</menu>
